Button: Reduce Inline Padding to Prevent Misalignment

--- a/widgets/button/styles/atom.less
+++ b/widgets/button/styles/atom.less
@@ -53,7 +53,7 @@
 		font-style: @button_font_style;
 
 		font-size: @font_size;
-		padding: @padding @padding*2;
+		padding: @padding;
 		.gradient(@button_color, darken(@button_color, 10%), @button_color);
 		border: 1px solid;
 		border-color: lighten(@border_color, 2%) @border_color darken(@border_color, 3%) @border_color;
