--- a/widgets/button/styles/flat.less
+++ b/widgets/button/styles/flat.less
@@ -54,7 +54,7 @@
 		font-style: @button_font_style;
 
 		font-size: @font_size;
-		padding: @padding @padding*2;
+		padding: @padding;
 		background: @button_color;
 
 		color: @text_color !important;
