--- a/widgets/button/styles/wire.less
+++ b/widgets/button/styles/wire.less
@@ -53,7 +53,7 @@
 		font-style: @button_font_style;
 
 		font-size: @font_size;
-		padding: @padding @padding*2;
+		padding: @padding;
 		background: transparent;
 		border: 2px solid @button_color;
 
